# Py2DCos

./: .coverage  .gitignore  ErrorMessages.py  MainWindow.py  MainWindow2.py  README.md  SecondWindow.py  main.py  pyproject.toml  twoDspecies.py  twoDspeciesNEW.py
Data for Base Case/: Test1.csv  Test1.txt
Data for Special Case/: FTIR sistemas binarios-longitud de onda de 1800 hasta 1400.xlsx  spectest.xlsx
data/Data for Base Case/: Test1.csv  Test1.txt  Test1.xlsx
data/Data for Special Case/: Artificial-5394.csv  FTIR sistemas binarios-longitud de onda de 1800 hasta 1400.xlsx
data/repelente datos/: repelente mir.xlsx  repelente nir.xlsx
src/py2dcos/: __main__.py
src/py2dcos/config/: resources.py
src/py2dcos/controller/: app_controller.py  plot_cache.py
src/py2dcos/core/: ErrorMessages.py  PCA.py  adapter.py  correlation_math.py  correlation_model.py  filters.py  (+6 more)
tests/: conftest.py  test_app_controller.py  test_base_box.py  test_correlatiom_type_box.py  test_correlation.py  test_correlation_math.py  test_correlation_model.py  test_data_treatment_box.py  test_diagonals_axes_box.py  test_excel_params_dialog.py  test_excel_utils.py  test_filters.py  test_gaussian_filter.py  test_graph_settings_box.py  test_input_files_box.py  test_integration.py  test_io.py  test_loader.py  test_locator.py  test_main_window.py  test_node_attenuation.py  test_pca_preprocessing.py  test_plot_async.py  test_plot_both.py  test_plot_sync.py  test_plotly_backend  test_plotly_backend.py  test_plotting.py  test_reference_spectra_box.py  test_shown_graph_box.py  test_validators.py
(+35 files in other folders)
